Video processing integrated successfully